--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ GENERATE_SOURCEMAP=false
 ## JWT auth api
 ## global url https://preview.keenthemes.com/hero-api/api
 ## local url http://127.0.0.1:8000/api
-VITE_APP_API_URL=https://preview.keenthemes.com/hero-api/api
-VITE_API_URL=http://localhost:3000
+VITE_APP_API_URL=http://localhost:3000/api/
+VITE_API_URL=http://localhost:3000/api/
